--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,16 +3,19 @@ repos:
     rev: 23.11.0
     hooks:
       - id: black
-        language_version: python3
+        files: ^backend/.*\.py$
+        args: [--config=backend/pyproject.toml]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
-        args: ["--profile", "black"]
+        files: ^backend/.*\.py$
+        args: [--settings-path=backend/pyproject.toml]
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
     hooks:
       - id: flake8
-        args: [--max-line-length=88]
+        files: ^backend/.*\.py$
+        args: [--config=backend/pyproject.toml]
