--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,20 +12,7 @@ requires-python = ">=3.8"
 [tool.black]
 line-length = 79
 target-version = ['py38', 'py39', 'py310', 'py311']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-)/
-'''
+include = '\\.pyi?$'
 
 [tool.isort]
 profile = "black"
@@ -35,15 +22,3 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
-
-[tool.flake8]
-max-line-length = 79
-extend-ignore = ["E203", "W503"]
-exclude = [
-    ".git",
-    "__pycache__",
-    ".venv",
-    "venv",
-    "dist",
-    "build",
-]
